Initial Pracht and Funke added
This adds Pracht and Funke for the SR5 system, it replaces resonace and submersion...

--- a/languages/de.json
+++ b/languages/de.json
@@ -2,6 +2,6 @@
     "SR5-Pracht":{
         "PRACHT": "Pracht",
         "FUNKE": "Funke",
-        "Settings": "Settings"
+        "Settings": "Einstellungen"
     }
 }
